2024-02-14T16:18:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7904173090 # 116
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-14
* notice: last 14d: unq all: 1 18
* notice: prev accum: outdated-unq outdated-all / unq all: 752 1190 / 762 1210
* notice: next accum: outdated-unq outdated-all / unq all: 753 1192 / 762 1210
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-31] / []

2024-02-14T01:04:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7894960406 # 114
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-14
* notice: last 14d: unq all: 1 19
* notice: prev accum: outdated-unq outdated-all / unq all: 751 1188 / 762 1210
* notice: next accum: outdated-unq outdated-all / unq all: 752 1190 / 762 1210
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [2024-01-30] / [2024-01-31]

2024-02-13T01:03:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7880195112 # 111
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-13
* notice: last 14d: unq all: 1 22
* notice: prev accum: outdated-unq outdated-all / unq all: 750 1186 / 762 1210
* notice: next accum: outdated-unq outdated-all / unq all: 751 1188 / 762 1210
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-29] / []

2024-02-12T01:03:59Z: