@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-14T16:18:10Z",
-  "count_outdated" : 1192,
-  "uniques_outdated" : 753,
+  "timestamp" : "2024-02-15T16:18:05Z",
+  "count_outdated" : 1194,
+  "uniques_outdated" : 754,
   "count" : 1210,
   "uniques" : 762,
   "clones" : [
-    {
-      "timestamp": "2024-02-01T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-02T00:00:00Z",
       "count": 2,
