@@ -1,12 +1,7 @@
 {
-  "count": 18,
+  "count": 16,
   "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2024-02-01T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-02-02T00:00:00Z",
       "count": 2,
